--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block main %}
-<h1>自分です!!。</h1>
+
+<h1>自分です！！</h1><button type="button" class="btn btn-primary">画像作成</button>
 <img src="{% static 'welcome.jpg' %}" />
+
 {% endblock %}
