--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -3,7 +3,9 @@
 
 {% block main %}
 
-<h1>自分です！！</h1><button type="button" class="btn btn-primary">画像作成</button>
+<h1>自分です！！</h1>
+<button type="button" class="btn btn-primary">画像作成</button>
+<button type="button" class="btn btn-primary">画像作成</button>
 <img src="{% static 'welcome.jpg' %}" />
 
 {% endblock %}
