--- a/website/templates/_navbar.html
+++ b/website/templates/_navbar.html
@@ -1,4 +1,27 @@
         <div class="navbar">
-            <a href="{% url 'index' %}">ホーム</a>
-            <a href="{% url 'about' %}">アバウト</a>
+            <nav class="navbar navbar-expand-sm navbar-dark bg-dark mt-3 mb-3">
+                <a class="navbar-brand" href="#">Nabbar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link active" href="{% url 'index' %}">新規登録</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'about' %}">データ一覧</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                エクスポート
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="#">サマリーデータ出力</a>
+                                <a class="dropdown-item" href="#">明細データ出力</a>
+                            </div>
+                        </li>
+                    </ul>
+                    </div>
+            </nav>
         </div>
